packages/portal-style/src/modules/_search.scss
.dp-po-search {
  background: linear-gradient(90deg, #3467A4 0%, #3A8DDE 49.48%, #77B5E7 100%);
  height: 240px;
  display: flex;
  align-items: center;
  justify-content: center;

  &-form {
    max-width: 750px;
    position: relative;
    width: 100%;

    input[type="search"] {
      width: 100%;
      background: $white;
      border: 1px solid $brand-primary;
      border-radius: 4px;
      padding: 13px 60px;
      font-family: $headings-font-family;
      font-size: $font-size-base * 1.277; // 23px at standard base size
      color: $grey-dark;
      outline: none;
    }

    button[type="submit"] {
      position: absolute;
      border: none;
      height: 32px;
      left: 16px;
      position: absolute;
      top: calc(50% - 16px);
      width: 32px;
      font-size: 26px;
      padding: 0;
      color: $brand-primary;
    }
  }
}

